--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,28 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+}
+
+.container {
+  max-width: 1220px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+
+.section-page {
+  padding: 100px 0;
+}
+
+.title {
+  text-align: center;
+  margin-bottom: 100px;
+  font-size: 36px;
+  line-height: 42px;
+  font-weight: 400;
+}
+
 .header {
   background-image: url(../images/header-bg.jpg);
   height: 100vh;
@@ -23,6 +45,23 @@ a {
   background-size: cover;
   background-position: center 50px;
   text-align: center;
+  position: relative;
+}
+
+.header::after {
+  content: "";
+  position: absolute;
+  height: 70px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: linear-gradient(
+    180deg,
+    #0e0e0e 0%,
+    rgba(17, 17, 17, 0.85) 16.53%,
+    rgba(32, 31, 33, 0) 100%
+  );
+  transform: rotate(180deg);
 }
 
 .menu__list {
@@ -53,4 +92,27 @@ a {
 
 .logo {
   padding-top: 278px;
+}
+
+.about__inner {
+  display: flex;
+}
+
+.about__info {
+  width: 375px;
+  margin-right: 50px;
+  flex: none;
+}
+
+.about__info-item {
+  margin-bottom: 25px;
+  color: #e5e5e5;
+}
+
+.about__info-item span {
+  display: block;
+}
+
+.about__text p {
+  margin-bottom: 25px;
 }
