--- a/css/style.css
+++ b/css/style.css
@@ -116,3 +116,43 @@ ul {
 .about__text p {
   margin-bottom: 25px;
 }
+
+.video {
+  background-image: url(../images/video-bg.jpg);
+  height: 100vh;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  text-align: right;
+}
+
+.video__text {
+  font-size: 72px;
+  font-style: italic;
+  line-height: 84px;
+  font-weight: 300;
+  color: #85ccdc;
+  padding-top: 444px;
+  margin-bottom: 40px;
+}
+
+.video__text span {
+  display: block;
+  padding-right: 285px;
+}
+
+.video__btn {
+  padding-left: 112px;
+  position: relative;
+  margin-right: 230px;
+}
+
+.video__btn::before {
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  top: -40px;
+  left: 0;
+  background-image: url(../images/youtube-btn.svg);
+}
