--- a/css/style.css
+++ b/css/style.css
@@ -156,3 +156,43 @@ ul {
   left: 0;
   background-image: url(../images/youtube-btn.svg);
 }
+
+.seasons__inner {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 100px 75px;
+  counter-reset: number;
+}
+
+.seasons__item {
+  width: 350px;
+  height: 250px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  list-style: none;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.seasons__item::before {
+  content: "0" counter(number);
+  counter-increment: number;
+  position: absolute;
+  font-size: 96px;
+  font-weight: 700;
+  line-height: 112px;
+  color: #600e09;
+  left: 0;
+  top: -72px;
+  z-index: -1;
+}
+
+.seasons__link {
+  font-size: 36px;
+  line-height: 42px;
+  padding: 12px 78px 11px;
+  background-color: #0e0e0e;
+}
