--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,10 @@ ul {
   align-items: center;
 }
 
+.seasons__item:hover .seasons__link {
+  opacity: 1;
+}
+
 .seasons__item::before {
   content: "0" counter(number);
   counter-increment: number;
@@ -190,9 +194,30 @@ ul {
   z-index: -1;
 }
 
+.seasons__item:hover::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(14, 14, 14, 0.8);
+}
+
 .seasons__link {
   font-size: 36px;
   line-height: 42px;
   padding: 12px 78px 11px;
   background-color: #0e0e0e;
+  opacity: 0;
+  transition: all 0.3s;
+  z-index: 2;
+}
+
+.heroes__inner {
+  display: flex;
+  justify-content: space-between;
+}
+.heroes__slider-img {
+  max-width: 775px;
 }
