--- a/css/style.css
+++ b/css/style.css
@@ -63,10 +63,7 @@ ul {
   );
   transform: rotate(180deg);
 }
-
-.menu__list {
-  display: flex;
-  justify-content: center;
+.menu {
   padding: 50px 0 58px;
   background: linear-gradient(
     180deg,
@@ -74,6 +71,14 @@ ul {
     #111213 43.62%,
     rgba(32, 31, 33, 0) 86.33%
   );
+}
+
+.menu__btn {
+  display: none;
+}
+.menu__list {
+  display: flex;
+  justify-content: center;
 }
 
 .menu__list-item {
@@ -85,7 +90,8 @@ ul {
   line-height: 42px;
 }
 
-.menu__list-link:hover {
+.menu__list-link:hover,
+.menu__list-link--active {
   color: #85ccdc;
   text-decoration: underline;
 }
@@ -159,13 +165,12 @@ ul {
 
 .seasons__inner {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(284px, 1fr));
   grid-gap: 100px 75px;
   counter-reset: number;
 }
 
 .seasons__item {
-  width: 350px;
   height: 250px;
   background-repeat: no-repeat;
   background-position: center center;
@@ -186,12 +191,15 @@ ul {
   counter-increment: number;
   position: absolute;
   font-size: 96px;
-  font-weight: 700;
+  font-weight: bold;
   line-height: 112px;
   color: #600e09;
   left: 0;
   top: -72px;
   z-index: -1;
+}
+.seasons__item:nth-child(n + 10)::before {
+  content: counter(number);
 }
 
 .seasons__item:hover::after {
@@ -218,6 +226,48 @@ ul {
   display: flex;
   justify-content: space-between;
 }
+
 .heroes__slider-img {
   max-width: 775px;
+}
+
+.heroes__slider-text {
+  max-width: 350px;
+}
+
+.slick-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  border: none;
+  background-color: transparent;
+  z-index: 5;
+  cursor: pointer;
+  outline: none;
+}
+
+.slick-prev {
+  left: 38px;
+}
+
+.slick-next {
+  right: 38px;
+}
+
+.heroes__name {
+  color: #85ccdc;
+  font-size: 72px;
+  font-style: italic;
+  font-weight: 300;
+  line-height: 84px;
+  margin-bottom: 44px;
+}
+
+.heroes__text p {
+  margin-bottom: 15px;
+}
+
+.copy {
+  padding: 14px 0 15px;
+  text-align: center;
 }
