--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ ul {
   transform: rotate(180deg);
 }
 .menu {
+  position: relative;
   padding: 50px 0 58px;
   background: linear-gradient(
     180deg,
@@ -76,6 +77,7 @@ ul {
 .menu__btn {
   display: none;
 }
+
 .menu__list {
   display: flex;
   justify-content: center;
@@ -168,6 +170,7 @@ ul {
   grid-template-columns: repeat(auto-fill, minmax(284px, 1fr));
   grid-gap: 100px 75px;
   counter-reset: number;
+  padding-top: 50px;
 }
 
 .seasons__item {
@@ -280,6 +283,17 @@ ul {
   background-size: cover;
   height: 90vh;
   position: relative;
+}
+
+.menu__container {
+  max-width: 1385px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.page-logo {
+  position: absolute;
+  left: 0;
 }
 
 .season-info {
