--- a/css/style.css
+++ b/css/style.css
@@ -370,6 +370,12 @@ ul {
   }
 }
 
+@media (max-width: 992px) {
+  .page-logo {
+    display: none;
+  }
+}
+
 @media (max-width: 768px) {
   .about__inner {
     display: block;
@@ -411,19 +417,105 @@ ul {
     line-height: 56px;
     margin-bottom: 25px;
   }
+  .season-info {
+    display: block;
+    padding: 30px 10px 0 10px;
+  }
+  .season-info__num {
+    text-align-last: left;
+    font-size: 50px;
+    line-height: 26px;
+    margin-bottom: 15px;
+  }
+  .season-info__num span {
+    font-size: 25px;
+    line-height: 32px;
+  }
 }
 
 @media (max-width: 640px) {
+  .menu {
+    padding: 0;
+    text-align: center;
+    background: linear-gradient(
+      180deg,
+      #111213 0%,
+      #111213 10%,
+      rgba(32, 31, 33, 0) 86.33%
+    );
+  }
   .menu__list {
-    display: none;
+    display: block;
+    transform: translateY(-130%);
+    transition: all 0.3s;
+  }
+  .menu__list.menu__list--active {
+    transform: translateY(0%);
+    padding: 100px 0 50px;
+    background-color: #0e0e0e;
+  }
+  .menu__list-link {
+    display: block;
+    padding: 10px 0;
   }
   .logo {
     padding-top: 21vh;
+  }
+  .page-logo {
+    display: block;
+    z-index: 10;
+    top: 22px;
+  }
+  .menu__btn {
+    display: block;
+    width: 50px;
+    height: 40px;
+    cursor: pointer;
+    position: absolute;
+    right: 10px;
+    top: 20px;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+  }
+  .menu__btn span {
+    background-color: #fff;
+    height: 5px;
+    width: 100%;
+  }
+  .menu__btn::after,
+  .menu__btn::before {
+    content: "";
+    width: 100%;
+    height: 5px;
+    background-color: #fff;
+    position: absolute;
+  }
+  .menu__btn::before {
+    top: 0;
+    left: 0;
+  }
+  .menu__btn::after {
+    bottom: 0;
+    left: 0;
+  }
+
+  .page-header {
+    height: 160vh;
   }
 }
 
 @media (max-width: 414px) {
   .seasons__item {
     height: 203px;
+  }
+}
+
+@media (max-width: 374px) {
+  .page-header {
+    height: 200vh;
   }
 }
